:bug: Fix div extending too far throwing off centering

--- a/src/components/ColorTool/ColorDisplayBox/ColorDisplayBox.css
+++ b/src/components/ColorTool/ColorDisplayBox/ColorDisplayBox.css
@@ -1,4 +1,3 @@
 .colorBox {
   height: 5rem;
-  width: 100%;
 }
